--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -4,10 +4,13 @@
       width: 100%;
     }
   } */
-  @tailwind base;
+  /* @tailwind base;
   @tailwind components;
-  @tailwind utilities;
+  @tailwind utilities; */
 
+  body {
+    overflow-x: hidden;
+  }
   
   @media (max-width: 768px) {
     .sidebar {
